# flake8-raise

./: CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  flake8_raise.py  setup.cfg  test_flake8_raise.py  tox.ini
.github/workflows/: black.yml  flake8.yml  isort.yml  lint.yml  test.yml  twine.yml
tests/: test_flake8_raise.py
tests/data/: bare_raise.py  nested_bare_raise.py  nested_no_raise.py  nested_raise_from.py  nested_raise_without_from.py  nested_raise_without_from.txt  no_raise.py  raise_after_except.py  raise_from.py  raise_inside_def.py  raise_with_arg.py  raise_with_attribute_with_empty_parentheses.py  raise_with_attribute_with_empty_parentheses.txt  raise_with_attribute_without_parentheses.py  raise_with_empty_parentheses.py  raise_with_empty_parentheses.txt  raise_with_empty_parentheses_noqa.py  raise_with_kwarg.py  raise_with_starargs.py  raise_with_starkwargs.py  raise_without_from.py  raise_without_from.txt  reraise_exception_after_other_except.py  reraise_exception_after_other_except.txt  reraise_exception_after_other_except_bare_raise.py  reraise_outer_exception.py  reraise_same_exception.py  reraise_same_exception.txt
