[metadata]
name = flake8-raise
version = 0.0.4
url = https://github.com/jdufresne/flake8-raise
author = Jon Dufresne
author_email = jon.dufresne@gmail.com
description = A flake8 plugin that finds that finds improvements for raise statements.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: Flake8
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = flake8_raise
python_requires = >=3.5
install_requires =
    flake8
    importlib-metadata; python_version < "3.8"

[options.entry_points]
flake8.extension =
    R1 = flake8_raise:RaiseStatementChecker

[flake8]
max-line-length = 88
exclude =
    .git
    .tox
    __pycache__
    tests/data
